--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^5.0.0",
+    "coveralls": "*",
     "declarations": "*",
+    "istanbul": "*",
     "mocha": "*",
-    "typescript": "next"
+    "mocha-lcov-reporter": "*",
+    "typescript": "*"
   },
   "scripts": {
     "test": "make test"
